# dart_llama_lib

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml  toolchain-aarch64.cmake
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/dart_llama_lib/: DartLlamaLibPlugin.kt
android/src/test/kotlin/com/example/dart_llama_lib/: DartLlamaLibPluginTest.kt
lib/: dart_llama_lib.dart
lib/bind/: llama_cpp.dart
lib/src/: llama.dart
src/: CMakeLists.txt
test/: main.dart
windows/: CMakeLists.txt
